--- a/Analayzee/requirements-prod.txt
+++ b/Analayzee/requirements-prod.txt
@@ -10,4 +10,7 @@ whitenoise>=6.6.0
 psycopg2-binary>=2.9.7
 django-cors-headers>=4.3.0
 django-ratelimit>=4.1.0
-django-extensions>=3.2.3 
+django-extensions>=3.2.3
+sentry-sdk[django]>=1.38.0
+redis>=5.0.1
+celery>=5.3.4
