--- a/Analayzee/.env.example
+++ b/Analayzee/.env.example
@@ -1,14 +1,13 @@
 # Django Settings
 SECRET_KEY=your-secret-key-here-generate-new-one
-DEBUG=True
-ALLOWED_HOSTS=localhost,127.0.0.1
+DEBUG=False
+ALLOWED_HOSTS=localhost,127.0.0.1,your-app-name.onrender.com
 
-# Database Settings (for production)
-DB_NAME=analayzee_db
-DB_USER=your_db_user
-DB_PASSWORD=your_db_password
-DB_HOST=localhost
-DB_PORT=5432
+# Database Settings (Render.com provides this automatically)
+DATABASE_URL=postgresql://user:password@host:port/dbname
+
+# Render.com specific
+RENDER=True
 
 # Email Settings (optional)
 EMAIL_HOST=smtp.gmail.com
