--- a/Analayzee/requirements.txt
+++ b/Analayzee/requirements.txt
@@ -10,4 +10,5 @@ whitenoise>=6.6.0
 psycopg2-binary>=2.9.7
 django-cors-headers>=4.3.0
 django-ratelimit>=4.1.0
-django-extensions>=3.2.3 
+django-extensions>=3.2.3
+dj-database-url>=2.1.0 
